kubernetes-old/flux/kube-system/cilium/cluster-policies/global-cluster-policies.sops.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
    name: host-fw-control-plane
    namespace: kube-system
spec:
    description: control-plane specific access rules.
    nodeSelector:
        matchLabels:
            node-role.kubernetes.io/control-plane: ""
    ingress:
        # Allow access to kube api from anywhere.
        - fromEntities:
            - world
            - cluster
          toPorts:
            - ports:
                - port: "6443"
                  protocol: TCP
        # Allow access to talos from anywhere.
        # https://www.talos.dev/v1.4/learn-more/talos-network-connectivity/
        - fromEntities:
            - cluster
        - fromCIDR:
            - ENC[AES256_GCM,data:DB26zBMDZNad0XutfdiJIU0=,iv:oK9Ns4pJscnT5uQPKhORcK68/WpdK/6Ibx3AlfvX0FE=,tag:EDQ8VNKlxBIvVoYuXJK2Yw==,type:str]
          toPorts:
            - ports:
                - port: "50000"
                  protocol: TCP
                - port: "50001"
                  protocol: TCP
        # Allow kube-proxy-replacement from kube-apiserver
        - fromEntities:
            - kube-apiserver
          toPorts:
            - ports:
                - port: "10250"
                  protocol: TCP
                - port: "4244"
                  protocol: TCP
        # Allow access from hubble-relay to hubble-peer (running on the node)
        - fromEndpoints:
            - matchLabels:
                k8s-app: hubble-relay
          toPorts:
            - ports:
                - port: "4244"
                  protocol: TCP
                  # Allow metrics-server to scrape
        - fromEndpoints:
            - matchLabels:
                k8s-app: metrics-server
          toPorts:
            - ports:
                - port: "10250"
                  protocol: TCP
        # Allow ICMP Ping from/to anywhere.
        # - icmps:
        #     - fields:
        #         - type: 8
        #           family: IPv4
        #         - type: 128
        #           family: IPv6
        # Allow cilium tunnel/health checks from other nodes.
        - fromEntities:
            - remote-node
          toPorts:
            - ports:
                - port: "8472"
                  protocol: UDP
                - port: "4240"
                  protocol: TCP
        # Allow access to etcd and api from other nodes.
        - fromEntities:
            - remote-node
          toPorts:
            - ports:
                - port: "2379"
                  protocol: TCP
                - port: "2380"
                  protocol: TCP
                - port: "51871"
                  protocol: UDP
        # Allow access to etcd and api from unconfigured nodes
        - fromCIDR:
            - ENC[AES256_GCM,data:DB26zBMDZNad0XutfdiJIU0=,iv:oK9Ns4pJscnT5uQPKhORcK68/WpdK/6Ibx3AlfvX0FE=,tag:EDQ8VNKlxBIvVoYuXJK2Yw==,type:str]
          toPorts:
            - ports:
                - port: "2379"
                  protocol: TCP
                - port: "2380"
                  protocol: TCP
    # # Allow HTTP and HTTPS access from anywhere
    # - fromEntities:
    #     - world
    #     - cluster
    #   toPorts:
    #     - ports:
    #         - port: "80"
    #           protocol: TCP
    #         - port: "443"
    #           protocol: TCP
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1ms2d7n4yhaq0mdap4cfyaq2xtfutlachqapkjfr0z2qr7ghc2ckq000jhm
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWYnRlblV4RVRSQnJuWDBy
[...]
            vlcvb50//2GzByxEhayJXsFYmNBU2Jop4XggtrQQfgClEZ5zTwZ/SA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-10-26T18:19:00Z"
    mac: ENC[AES256_GCM,data:iKPYBr0zbdBA2kfHMtc62Z4t+D1fw13uPf14qywe6CHBlgIAFB5ADoOC+1LGAL0mfsoxSYXXRvIuIKD8a++w9DF02DHEdSqRYYq4VUzE/RqvJgc8aG1uPQOq2gH4ZkzE9gmUzqgexMNMgyOSCq3cBgYaTP9HjsCKGeoy5u+XNIs=,iv:f5pVqrwHEtL/+2Iey7gwtfJl9XJiWpvMd/wg2wI71pU=,tag:lsBgyCp1RtOhe2XmcAZRAg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|fromCIDR|clusterDomain|k8sServiceHost)$
    version: 3.8.1
